--- a/DragonBallV2.css
+++ b/DragonBallV2.css
@@ -35,7 +35,7 @@
 .sheet-abilities{
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgb(255,255,255);
+    background-color: white;
     text-align: center;
 }
 
@@ -148,10 +148,9 @@ button[type="roll"].sheet-attack-button{
 }
 
 .sheet-transformations{
-    background-image: url(https://i.pinimg.com/564x/75/a2/d4/75a2d435cf7687fc839860f45cc4ac1e.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #070602;
+    background-color: white;
     text-align: center;
 }
 
@@ -310,13 +309,13 @@ button[type="roll"].sheet-attack-button{
 .sheet-attacks{
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     text-align: center;
 }
 
 .sheet-character{
     background-position: center;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
     background-repeat: no-repeat;
     text-align: center;
 }
@@ -328,7 +327,7 @@ button[type="roll"].sheet-attack-button{
     justify-content: space-between;
     align-items: center;
     padding-left: 6px;
-    border: 1px inset darkred;
+    border: 1px inset darkgray;
 }
 
 .sheet-skill1{
@@ -338,11 +337,11 @@ button[type="roll"].sheet-attack-button{
     justify-content: space-between;
     align-items: center;
     padding-left: 6px;
-    border: 1px inset darkred;
+    border: 1px inset darkgray;
 }
 
 .sheet-skill-label{
-    color: rgb(27, 92, 129);
+    color: black;
 }
 
 button[type="roll"].sheet-skill:before{
@@ -477,7 +476,7 @@ button[type="roll"].sheet-skill{
 }
 .sheet-info{
     display: grid;
-    border: 3px solid darkred;
+    border: 3px solid darkgray;
     grid-row: 25px;
     grid-template-areas:
     'attr-head'
@@ -486,36 +485,36 @@ button[type="roll"].sheet-skill{
 }
 
 .sheet-j-label{
-    color: rgb(15, 56, 80);
+    color: black;
 }
 
 .sheet-j-h3{
-    color: rgb(15, 56, 80);
+    color: black;
     font-size: 1.5em;
 }
 
 h1{
     font-size: 3em;
-    color: navy;
+    color: black;
 }
 
 h2{
     font-size: 2em;
-    color: navy;
+    color: black;
 }
 
 h3{
     font-size: 1.5em;
     text-align: center;
-    color: navy;
+    color: black;
 }
 
 h4{
     font-size: 1em;
-    color: navy;
+    color: black;
 }
 
 label{
-    color: navy;
+    color: black;
     display: inline-block;
 }
