Replaced logo; Rearranged skills and abilities

--- a/DragonBallV2.css
+++ b/DragonBallV2.css
@@ -2,9 +2,8 @@
 
 /*Configure the tab buttons*/
 .sheet-banner{
-    background-image: url(https://i.pinimg.com/564x/ad/ce/f3/adcef371d608bdabd95fca1ee9a37ec4.jpg);
+    background-image: url(https://homemadegaming.files.wordpress.com/2020/10/cropped-bal_logo_no_background.png?w=50);
     background-color: white;
-    background-size: 50% 100%;
     background-position: center top;
     background-repeat: no-repeat;
     text-align: center;
