--- a/DragonBallV2.css
+++ b/DragonBallV2.css
@@ -15,6 +15,32 @@
 	display: none;
 }
 
+.sheet-abilityTable{
+    display:grid;
+    border-style: none;
+    grid-template-areas:
+    'abilityName abilityMod abilityTrans abilityRanks abilityRacial abilityTotal';
+}
+
+.sheet-abilityName{
+    grid-area: 'abilityName';
+}
+.sheet-abilityMod{
+    grid-area: 'abilityMod';
+}
+.sheet-abilityTrans{
+    grid-area: 'abilityTrans';
+}
+.sheet-abilityRanks{
+    grid-area: 'abilityRanks';
+}
+.sheet-abilityRacial{
+    grid-area: 'abilityRacial';
+}
+.sheet-abilityTotal{
+    grid-area: 'abilityTotal';
+}
+
 /* show the selected tab */
 .sheet-tabstoggle[value="attributes"] ~ div.sheet-attributes,
 .sheet-tabstoggle[value="attacks"] ~ div.sheet-attacks,
@@ -43,7 +69,7 @@
     border: 2px solid silver;
     justify-content: space-around;
     grid-template-areas: 
-    'tname tagi tins tper tpot tsch tspi tstr tten';
+    'tname tagi tins tper tsch tspi tstr tten';
 }
 
 .sheet-tten{
@@ -51,7 +77,7 @@
 }
 
 .sheet-tstr{
-    grid-area: tstr;
+    grid-area: tfor;
 }
 
 .sheet-tspi{
@@ -97,7 +123,7 @@
     grid-area: transformations-top;
     display: grid;
     grid-template-areas: 
-    'tn ta ti tpe tpo tsc tsp tst tte';
+    'tn ta ti tpe tsc tsp tst tte';
 }
 
 .sheet-transformations-page{
