--- a/DragonBallV2.css
+++ b/DragonBallV2.css
@@ -123,7 +123,7 @@
     grid-area: transformations-top;
     display: grid;
     grid-template-areas: 
-    'tn ta ti tpe tsc tsp tst tte';
+    'tn tag tin tpe tsc tsp tfo tte';
 }
 
 .sheet-transformations-page{
