Skill and Save proficiency rework

--- a/DragonBallV2.css
+++ b/DragonBallV2.css
@@ -26,7 +26,7 @@
 .sheet-save-table{
     border-top: 1px inset darkgray;
     grid-template-areas:
-    'save-name save-profieciency save-misc save-total';
+    'save-name save-misc save-total';
     display:grid;
 }
 
